deps: bump log4j from 2.14.1 to 2.15.0